出站接口再次封装， 文档整理，demo示例